--- a/Modules.html
+++ b/Modules.html
@@ -108,4 +108,33 @@
 </table>
 </div>
 
+<div class="row">
+<h2>Module: CodeReading</h2>
+<h4></div>
+<div class="row">
+</div>
+<div class="row">
+<table border="1">
+  <tr><th>Topic(Effort)</th><th>Segments</th></tr>
+  <tr>
+    <td><h3>Principles(10)</h3></td>
+    <td>
+      <table>
+        <tr>
+          <th>Segment</th><th>Due</th><th>ReadMins</th>          <th>Lecture</th><th>Transcript</th>          <th>Notes/Materials</th>
+        </tr>
+        <tr>
+          <td>CodeReading:Principles:A</td>
+          <td>6/1</td>
+          <td>10.0 m</td>
+          <td>None</td>
+          <td><a href="Modules/02CodeReading/0Principles/TranscriptA.html">Transcript</a></td>
+          <td>None</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+</div>
+
 <script>$(document).foundation();</script></body></html>
