--- a/Modules.html
+++ b/Modules.html
@@ -134,6 +134,40 @@
       </table>
     </td>
   </tr>
+  <tr>
+    <td><h3>Documentation(10)</h3></td>
+    <td>
+      <table>
+        <tr>
+          <th>Segment</th><th>Due</th><th>ReadMins</th>          <th>Lecture</th><th>Transcript</th>          <th>Notes/Materials</th>
+        </tr>
+        <tr>
+          <td>CodeReading:Documentation:A</td>
+          <td>6/1</td>
+          <td>10.0 m</td>
+          <td>None</td>
+          <td><a href="Modules/02CodeReading/1TechWriting/TranscriptA.html">Transcript</a></td>
+          <td>None</td>
+        </tr>
+        <tr>
+          <td>CodeReading:Documentation:B</td>
+          <td>6/1</td>
+          <td>10.0 m</td>
+          <td>None</td>
+          <td><a href="Modules/02CodeReading/1TechWriting/TranscriptB.html">Transcript</a></td>
+          <td>None</td>
+        </tr>
+        <tr>
+          <td>CodeReading:Documentation:C</td>
+          <td>6/1</td>
+          <td>10.0 m</td>
+          <td>None</td>
+          <td><a href="Modules/02CodeReading/1TechWriting/TranscriptC.html">Transcript</a></td>
+          <td><a href="Modules/02CodeReading/1TechWriting/Dings.html">Writing Dings</a><br/></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
 </table>
 </div>
 
