--- a/Modules.html
+++ b/Modules.html
@@ -105,6 +105,24 @@
       </table>
     </td>
   </tr>
+  <tr>
+    <td><h3>WebPack(10)</h3></td>
+    <td>
+      <table>
+        <tr>
+          <th>Segment</th><th>Due</th><th>ReadMins</th>          <th>Lecture</th><th>Transcript</th>          <th>Notes/Materials</th>
+        </tr>
+        <tr>
+          <td>BuildTools:WebPack:A</td>
+          <td>6/7</td>
+          <td>10.0 m</td>
+          <td>None</td>
+          <td><a href="Modules/01BuildTools/2WebPack/TranscriptA.html">Transcript</a></td>
+          <td><a href="Modules/01BuildTools/2WebPack/minipack.zip">Minipack zip</a><br/><a href="Modules/01BuildTools/2WebPack/webpack-demo.zip">Zip for WebPack demo</a><br/></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
 </table>
 </div>
 
