--- a/Modules.html
+++ b/Modules.html
@@ -123,6 +123,24 @@
       </table>
     </td>
   </tr>
+  <tr>
+    <td><h3>Make(10)</h3></td>
+    <td>
+      <table>
+        <tr>
+          <th>Segment</th><th>Due</th><th>ReadMins</th>          <th>Lecture</th><th>Transcript</th>          <th>Notes/Materials</th>
+        </tr>
+        <tr>
+          <td>BuildTools:Make:A</td>
+          <td>6/9</td>
+          <td>10.0 m</td>
+          <td>None</td>
+          <td><a href="Modules/01BuildTools/3Make/TranscriptA.html">Transcript</a></td>
+          <td><a href="Modules/01BuildTools/3Make/Makefile">Sample makefile</a><br/></td>
+        </tr>
+      </table>
+    </td>
+  </tr>
 </table>
 </div>
 
